fix  x-overflow

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -40,6 +40,7 @@
 
 html {
   overflow-y: scroll; // Нужно чтоб всегда была полоса прокрутки. Потомуц что если ее нет и открывается аккордеон, и прокрутка появляется, то контент сдвигается влево
+  overflow-x: hidden;
 }
 
 body {
